<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_create_shortcut">Create Shortcut</string>
    <string name="advanced">Advanced</string>
    <string name="app_name">G2 Skin Tweaks</string>
    <string name="ask_for_root">Ask for root</string>
    <string name="ask_for_root_summary">Recommended, can produce weird results until root is granted.</string>
    <string name="bubble_hangouts">Hangouts Bubble</string>
    <string name="bubble_square">Square Bubble</string>
    <string name="category_background">Background Image</string>
    <string name="category_background_color">Background Color</string>
    <string name="category_bubbles">Bubbles</string>
    <string name="category_colors">Colors</string>
    <string name="category_conversation_list_customization">Conversation list customization</string>
    <string name="category_conversation_list_customization_summary">Set background &amp; text colors.</string>
    <string name="category_lg_lockscreen">Lockscreen Customization</string>
    <string name="category_messages_customization">Message list customization</string>
    <string name="category_messages_customization_summary">Set text size &amp; colors.</string>
    <string name="category_recent_apps">Recent Apps</string>
    <string name="category_screen">Screen</string>
    <string name="category_shortcuts">Shortcuts</string>
    <string name="category_text_size">Text Size</string>
    <string name="category_transparency">Transparency</string>
    <string name="category_tweaks">Tweaks</string>
    <string name="custom_bubbles_note">Text wont always fit correctly inside any bubble. If it doesn\'t, try to move the bubble to another slot.\n\nBubble slot 4 is recommended.</string>
    <string name="default_string">Default</string>
    <string name="enable_debugging">Enable Debugging</string>
    <string name="information">Some options requires you kill the relevant app process before it takes effect.</string>
    <string name="information_header">Information!</string>
    <string name="launcher_customization">Launcher Customization</string>
    <string name="messenger_customization">Messenger Customization</string>
    <string name="pref_aosp_pattern_dots">Enable AOSP like pattern dots</string>
    <string name="pref_aosp_pattern_dots_summary">Removes inner circle around dot, and turn the outer circle white.</string>
    <string name="pref_applications_shortcut">Applications info shortcut</string>
    <string name="pref_applications_shortcut_summary">Click the icon in the App Info dialog to open the app in Applications.</string>
    <string name="pref_bubble_color_left">Incoming bubble color</string>
    <string name="pref_bubble_color_left_summary">Select the color for the incoming bubble.</string>
    <string name="pref_bubble_color_right">Outgoing bubble color</string>
    <string name="pref_bubble_color_right_summary">Select the color for the outgoing bubble.</string>
    <string name="pref_bubble_slot_1">Bubble slot 1</string>
    <string name="pref_bubble_slot_2">Bubble slot 2</string>
    <string name="pref_bubble_slot_3">Bubble slot 3</string>
    <string name="pref_bubble_slot_4">Bubble slot 4</string>
    <string name="pref_bubble_slot_5">Bubble slot 5</string>
    <string name="pref_bubble_slot_6">Bubble slot 6</string>
    <string name="pref_conversation_color_bottom">Bottom Line Color</string>
    <string name="pref_conversation_color_bottom_summary">Select the color for the subject line.</string>
    <string name="pref_conversation_color_top">Top Line Color</string>
    <string name="pref_conversation_color_top_summary">Select the color for the sender name line.</string>
    <string name="pref_conversation_list_bg">Enable background image</string>
    <string name="pref_conversation_list_bg_color">Enable background color</string>
    <string name="pref_conversation_list_bg_color_summary">Will be used as color overlay if background is enabled.</string>
    <string name="pref_conversation_list_bg_color_value">Background color</string>
    <string name="pref_conversation_list_bg_color_value_summary">Use a light color the make dark text more visible, and visa versa.</string>
    <string name="pref_conversation_list_bg_color_alpha">Background color alpha</string>
    <string name="pref_conversation_list_bg_color_alpha_summary">Set the background color\'s alpha. Current value: %1$s</string>
    <string name="pref_conversation_list_bg_select">Select background image</string>
    <string name="pref_conversation_list_bg_select_summary">Click to browse for background image.</string>
    <string name="pref_current_value_summary">Current value: %1$s</string>
    <string name="pref_custom_bubbles">Custom bubble(s)</string>
    <string name="pref_custom_colors">Custom colors</string>
    <string name="pref_custom_text_colors">Custom text colors</string>
    <string name="pref_date_offset">Date offset</string>
    <string name="pref_date_offset_summary">Set the date size to the current zoom level - given offset.</string>
    <string name="pref_dont_turn_screen_on_sms">Don\'t turn on screen on SMS</string>
    <string name="pref_flash_power_led">Flash Power LED</string>
    <string name="pref_flash_power_led_summary">Reactivate Power LED. Requires root.</string>
    <string name="pref_hide_lockscreen_shortcut_titles">Remove app names from Lockscreen</string>
    <string name="pref_messages_text_color_left">Incoming text color</string>
    <string name="pref_messages_text_color_left_summary">Select the color for the incoming text</string>
    <string name="pref_messages_text_color_right">Outgoing text color</string>
    <string name="pref_messages_text_color_right_summary">Select the color for the outgoing text.</string>
    <string name="pref_minimum_text_size">Minimum text size</string>
    <string name="pref_minimum_text_size_summary">The minimum text size allowed.</string>
    <string name="pref_move_clear_notifications_btn">Move \'Clear\' button in notifications panel.</string>
    <string name="pref_move_clear_notifications_btn_summary">Moves the \'Clear\' button next to options button in the notifications panel. Reboot required.</string>
    <string name="pref_power_led_off">Turn Power LED off</string>
    <string name="pref_power_led_off_summary">Use this if the Power LED gets stuck in \'ON\' state.</string>
    <string name="pref_power_led_time">Power LED time</string>
    <string name="pref_power_led_time_summary">The amount of time in milliseconds the Power LED will stay on after new SMS/MMS.</string>
    <string name="pref_recent_apps_opacity">Custom opacity</string>
    <string name="pref_recent_apps_opacity_summary">Enable custom opacity for the Recent Apps list.</string>
    <string name="pref_recent_apps_opacity_value">Custom opacity value</string>
    <string name="pref_remove_dividers">Remove dividers</string>
    <string name="pref_remove_dividers_summary">Removes dividers from LG Switches.</string>
    <string name="pref_replace_switch">Enable replacement switch</string>
    <string name="pref_replace_switch_summary">Replaces LG Switches with LG CheckBoxes. REQUIRES REBOOT.</string>
    <string name="pref_smaller_text">Smaller text size</string>
    <string name="pref_smaller_text_summary">Enable smaller text size when pinch zooming in LG Messenger app.</string>
    <string name="pref_transparency">Transparency</string>
    <string name="pref_transparency_value">Transparency value</string>
    <string name="reboot">Reboot</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="set_background_complete">Background was set!</string>
    <string name="shortcut_xposed_installer">Xposed Installer</string>
    <string name="soft_reboot">Soft Reboot</string>
    <string name="title_bubble_customization">Bubble customization</string>
    <string name="title_bubble_customization_summary">Set colors &amp; transparency.</string>
    <string name="title_custom_bubbles">Custom bubble(s)</string>
    <string name="title_custom_bubbles_summary">Set custom bubbles for the LG Messenger app.</string>
    <string name="title_general">General</string>
    <string name="title_lg_launcher">LG Launcher</string>
    <string name="title_lg_lockscreen">LG Lockscreen</string>
    <string name="title_messenger">LG Messenger</string>
    <string name="title_misc">Misc</string>
    <string name="turned_power_led_off">Turned power LED off</string>
    <string name="xposed_installer_not_found">Couldn\'t find Xposed Installer.</string>

</resources>