<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/messenger_customization">
        <com.gmail.alexellingsen.g2skintweaks.preference.EditIntPreference
            android:defaultValue="30"
            android:icon="@null"
            android:inputType="number"
            android:key="pref_minimum_zoom"
            android:numeric="integer"
            android:summary="@string/pref_minimum_zoom"
            android:title="@string/pref_minimum_zoom_summary"/>

        <com.gmail.alexellingsen.g2skintweaks.preference.EditIntPreference
            android:defaultValue="0"
            android:icon="@null"
            android:inputType="number"
            android:key="pref_date_offset_size"
            android:numeric="integer"
            android:summary="Set the size offset for date text in pixels (px)."
            android:title="Date Size Offset"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/advanced">
        <com.gmail.alexellingsen.g2skintweaks.preference.EditIntPreference
            android:defaultValue="1000"
            android:icon="@null"
            android:inputType="number"
            android:key="pref_power_led_time"
            android:numeric="integer"
            android:summary="@string/pref_power_led_time_summary"
            android:title="@string/pref_power_led_time"/>

        <Preference
            android:icon="@null"
            android:key="btn_turn_off_power_led"
            android:summary="@string/pref_power_led_off_summary"
            android:title="@string/pref_power_led_off"/>
    </PreferenceCategory>

</PreferenceScreen>